src/main/java/com/example/tms/error/IsNotAdminActionException.java
package com.example.tms.error;

public class IsNotAdminActionException extends RuntimeException {
    public IsNotAdminActionException(String message) {super(message);}
}
